Fixed a bug in line wrapping.

--- a/Algebra-and-Geometry/css/style-alggeo.css
+++ b/Algebra-and-Geometry/css/style-alggeo.css
@@ -204,7 +204,7 @@ main{
     justify-content: center;
     width: 160px;
     height: 200px;
-    word-break: break-all;
+    word-break: inherit;
 }
 
 .stepText p{
